--- a/vueBackEnd/src/main/resources/application.yml
+++ b/vueBackEnd/src/main/resources/application.yml
@@ -4,16 +4,21 @@ spring:
     username: root
     password: mysqldb
     driver-class-name: com.mysql.jdbc.Driver
-  jpa:
-    database: MYSQL
-    show-sql: true
-    hibernate:
-      ddl-auto: validate
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+#  jpa:
+#    database: MYSQL
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: validate
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MySQL5Dialect
 redis:
   host: localhost
   port: 6379
 server:
   port: 8085
+
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+    show-sql: true
